<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0E2130"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/bee" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Create"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="12dp"
                android:gravity="start"
                android:hint="@string/text_username"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="12dp"
                android:gravity="start"
                android:hint="@string/Phone"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/loginLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="12dp"
                android:gravity="start"
                android:hint="@string/Location"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="12dp"
                android:gravity="start"
                android:hint="@string/text_password"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="12dp"
                android:gravity="start"
                android:hint="@string/confirm_password"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"></EditText>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:visibility="visible">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:text="@string/genderM"
                    android:textSize="16sp"
                    tools:visibility="visible" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:text="@string/GenderF"
                    android:textSize="16sp"
                    tools:visibility="visible" />
            </RadioGroup>

            <Button
                android:id="@+id/SignUp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#FFC107"
                android:backgroundTintMode="add"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textAlignment="gravity"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="40dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/button_sign_in"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>