<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mll"
    android:background="#0E2130"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_logo"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="30sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="@string/text_username"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:hint="@string/text_username"
            android:drawableLeft="@drawable/ic_username"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:autofillHints="@string/text_password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:hint="@string/text_password"
            android:drawableLeft="@drawable/ic_password" />



        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFC107"
            android:text="@string/button_text_login"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/text_forgot"
                android:textColor="#fff"
                android:gravity="left"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:text="@string/button_sign_up"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>